--- a/Kentor.Log4NetExtensions.BurstFilter/Kentor.Log4NetExtensions.BurstFilter.csproj
+++ b/Kentor.Log4NetExtensions.BurstFilter/Kentor.Log4NetExtensions.BurstFilter.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Kentor.Log4NetExtensions.BurstFilter.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
